; ModuleID = '/home/carl/AnghaBench/tg/extr_interface.c_do_reply_location.c'
source_filename = "/home/carl/AnghaBench/tg/extr_interface.c_do_reply_location.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.command = type { i32 }
%struct.arg = type { i32, i32 }
%struct.in_ev = type { i32 }

@TLS = common dso_local global i32 0, align 4
@print_msg_success_gw = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_reply_location(%struct.command* %0, i32 %1, %struct.arg* %2, %struct.in_ev* %3) #0 {
  %5 = alloca %struct.command*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.arg*, align 8
  %8 = alloca %struct.in_ev*, align 8
  store %struct.command* %0, %struct.command** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.arg* %2, %struct.arg** %7, align 8
  store %struct.in_ev* %3, %struct.in_ev** %8, align 8
  %9 = load i32, i32* %6, align 4
  %10 = icmp eq i32 %9, 3
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load %struct.in_ev*, %struct.in_ev** %8, align 8
  %14 = icmp ne %struct.in_ev* %13, null
  br i1 %14, label %15, label %20

15:                                               ; preds = %4
  %16 = load %struct.in_ev*, %struct.in_ev** %8, align 8
  %17 = getelementptr inbounds %struct.in_ev, %struct.in_ev* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %17, align 4
  br label %20

20:                                               ; preds = %15, %4
  %21 = load i32, i32* @TLS, align 4
  %22 = load %struct.arg*, %struct.arg** %7, align 8
  %23 = getelementptr inbounds %struct.arg, %struct.arg* %22, i64 0
  %24 = getelementptr inbounds %struct.arg, %struct.arg* %23, i32 0, i32 1
  %25 = load %struct.arg*, %struct.arg** %7, align 8
  %26 = getelementptr inbounds %struct.arg, %struct.arg* %25, i64 1
  %27 = getelementptr inbounds %struct.arg, %struct.arg* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.arg*, %struct.arg** %7, align 8
  %30 = getelementptr inbounds %struct.arg, %struct.arg* %29, i64 2
  %31 = getelementptr inbounds %struct.arg, %struct.arg* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* @print_msg_success_gw, align 4
  %34 = load %struct.in_ev*, %struct.in_ev** %8, align 8
  %35 = call i32 @tgl_do_reply_location(i32 %21, i32* %24, i32 %28, i32 %32, i32 0, i32 %33, %struct.in_ev* %34)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @tgl_do_reply_location(i32, i32*, i32, i32, i32, i32, %struct.in_ev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
